--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "axios-mock-adapter": "^1.10.0",
     "bulma": "^0.5.3",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "font-awesome": "^4.7.0",
+    "jest-localstorage-mock": "^2.1.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.1",
     "raf": "^3.4.0",
@@ -26,6 +28,7 @@
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
